complete decent HTML/CSS draft of home

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -26,17 +26,16 @@
   /*text-align: center;*/
 }
 
+.float-right {
+  float: right;
+}
+
 .row {
   display: flex;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
   padding: 0 12px;
   align-items: center;
 }
-
-.row:last-child {
-  margin-bottom: 0;
-}
-
 
 .viewport {
   height: 100vw; 
@@ -131,9 +130,8 @@
   color: #FFF;
 }
 
-ul.nav.navbar-nav {
-  /*background-color: #017E82;*/
-  /*color: white !important;*/
+ul {
+  list-style-type: none;
 }
 
 /*TODO: make hover color go away*/
@@ -141,40 +139,46 @@ li>a.nav-menu-item {
   color: white;
   font-size: 1.1em;
   font-weight: lighter;
+  /*background-color: yellow;*/
+  /*height: 70px;*/
+  /*text-align: right;*/
+  text-decoration: none;
 }
 
 #nav-menu {
-  color: white;
+  /*color: white;*/
   /*background-color: red;*/
 }
 
+.brand {
+  /*height: 70px;*/
+  /*position: absolute;*/
+}
 /***********************************/
 /******** HOME VIEW ********/
 /************************************/
 
 .gyftee-nav {
-  height: 60px;
+  height: 70px;
 }
 
-/*nav.navbar-nav {
-  background-color: black;
-}
-*/
 .brand-icon {
-  height: 30px;
+  height: 35px;
+  padding-right: 10px;
 }
 
 .welcome-container {
-  padding: 70px 10px 0 40px;
+  padding: 70px 10px 20px 40px;
   /*background-color: yellow;*/
 }
 
 .greeting-text {
   font-size: 1.2em;
+  padding-bottom: 10px;
 }
 
 .firstname {
-  font-size: 1.8em;
+  font-size: 1.5em;
   font-weight: lighter;
   padding-bottom: 10px;
 }
@@ -201,9 +205,10 @@ li>a.nav-menu-item {
 }
 
 .profile-photo-container {
+  padding-top: 20px;
   display: flex;
   flex: 1;
-  /*background-color: white;*/
+  /*background-color: yellow;*/
   /*justify-content: center;*/
 }
 .profile-photo {
@@ -233,11 +238,16 @@ li>a.nav-menu-item {
   /*margin-bottom: -80%;*/
 }
 
+.bday-list-body {
+  /*margin: 48px auto;*/
+  padding: 0;
+}
+
 .bday-list-header {
   color: #017E82;
   font-size: 1.3em;
   font-weight: bold;
-  margin-left: 60px;
+  margin-left: 65px;
   margin-bottom: 10px;
 }
 
@@ -249,7 +259,7 @@ li>a.nav-menu-item {
 #friendname {
   color: #004851;
   text-decoration: none;
-  padding-left: 10px;
+  /*padding-left: 10px;*/
   font-size: 1.3em;
 }
 
@@ -263,17 +273,38 @@ li>a.nav-menu-item {
   font-size: 30px;
 }
 
+.heart-div {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+
 .heart:hover {
   opacity: 0.5;
 }
 
 .bday-row {
-  padding: 20px 40px 20px 30px;
-  border: {
-    color: black,
-    width: 1px
-  } 
+  padding: 20px 20px 20px 20px;
+  /*border-style: solid;*/
+  border-top: solid;
+  border-color: white;
+  display: flex;
+  /*margin-bottom: 20px;*/
+  /*padding: 0 12px;*/
+  align-items: center;
 }
+
+.bday-row:last-child {
+  padding-bottom: 20px;
+}
+
+.date-container {
+  display: flex;
+  flex: 0.4;
+  font-size: 1.2em;
+  color: #004851;
+}
+
 /***********************************/
 /******** GIFT DETAIL VIEW ********/
 /************************************/
