--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -168,7 +168,7 @@ li>a.nav-menu-item {
 }
 
 .welcome-container {
-  padding: 70px 10px 20px 40px;
+  padding: 80px 10px 20px 40px;
   /*background-color: yellow;*/
 }
 
@@ -235,7 +235,7 @@ li>a.nav-menu-item {
   color: #FFF;
   align-content: center;
   border-radius: 10px 0 10px 0;
-  /*margin-bottom: -80%;*/
+  padding-bottom: 10px;
 }
 
 .bday-list-body {
@@ -245,7 +245,7 @@ li>a.nav-menu-item {
 
 .bday-list-header {
   color: #017E82;
-  font-size: 1.3em;
+  font-size: 1.1em;
   font-weight: bold;
   margin-left: 65px;
   margin-bottom: 10px;
