Update login view

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -10,6 +10,8 @@
   box-sizing: border-box;
 }
 
+
+
 .flex-container {
   display: -webkit-flex; /* for safari */
   display: flex;
@@ -88,6 +90,7 @@
 
 .login-container {
   background-color: #017E82;
+  display: flex;
 }
 
 .logo {
@@ -103,7 +106,7 @@
   text-align: center;
 }
 
-#login-button {
+.login-button {
   width: 250px;
   height: 80px;
   position: relative;
