--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -172,18 +172,24 @@ li>a.nav-menu-item {
   padding-right: 10px;
 }
 
+.welcome-main {
+  /*holds the welcome, name greeting and photo*/
+  margin-top: 40px;
+}
 .welcome-container {
-  padding: 80px 10px 20px 40px;
+  padding: 0px 20px 0px 65px;
   /*background-color: yellow;*/
+  text-align: left;
+  flex: 1.2;
 }
 
 .greeting-text {
-  font-size: 1.2em;
-  padding-bottom: 10px;
+  font-size: 1.0em;
+  padding-bottom: 0px;
 }
 
 .firstname {
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-weight: lighter;
   padding-bottom: 10px;
 }
@@ -210,39 +216,49 @@ li>a.nav-menu-item {
 }
 
 .profile-photo-container {
-  padding-top: 40px;
+  padding-top: 10px;
   display: flex;
   flex: 1;
   /*background-color: yellow;*/
-  /*justify-content: center;*/
+  justify-content: center;
 }
 .profile-photo {
   border-radius: 50%;
   /*background-color: yellow;*/
   /*background-position: 50%;*/
-  position: relative;
-}
-
-.welcome {
   /*position: relative;*/
-  flex: 1.6;
-  /*background-color: red;*/
+  height: 120px;
+  width: 120px;
 }
 
-#invite-button {
-  width: 150px;
-  height: 50px;
-  position: relative;
+.invite-button {
+  /*position: relative;*/
   /*justify-content: center;*/
   border-color: #004851;
-  font-size: 1.0em;
+  font-size: 0.7em;
   background-color: #004851;
   color: #FFF;
-  align-content: center;
+  /*align-content: center;*/
   border-radius: 10px 0 10px 0;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  padding: 10px;
+  text-align: center;
+  width: 70%;
 }
 
+.invite-link {
+  text-decoration: none;
+}
+.invite-link:hover {
+  color: transparent;
+}
+
+/*.invite-button-text {
+  padding-top: 10px;
+  background-color: green;
+}
+*/
 .bday-list-body {
   /*margin: 48px auto;*/
   padding: 0;
@@ -315,7 +331,7 @@ li>a.nav-menu-item {
 /***********************************/
 /******** ALL FRIEND VIEW ********/
 /************************************/
-.all-friend-row{
+.all-friend-row {
   padding: 20px 20px 20px 20px;
   /*border-style: solid;*/
   border-top: solid;
