--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -174,7 +174,7 @@ li>a.nav-menu-item {
 
 .welcome-main {
   /*holds the welcome, name greeting and photo*/
-  margin-top: 40px;
+  margin-top: 80px;
 }
 .welcome-container {
   padding: 0px 20px 0px 65px;
@@ -182,6 +182,10 @@ li>a.nav-menu-item {
   text-align: left;
   flex: 1.2;
 }
+.filter-friend-flex-container{
+  margin-top: 100px;
+}
+
 
 .greeting-text {
   font-size: 1.0em;
@@ -244,7 +248,7 @@ li>a.nav-menu-item {
   margin-bottom: 20px;
   padding: 10px;
   text-align: center;
-  width: 70%;
+  width: 20%;
 }
 
 .invite-link {
@@ -374,6 +378,18 @@ li>a.nav-menu-item {
   position: fixed;
 }
 
+.second-flex-container {
+  display: -webkit-flex; /* for safari */
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 50;
+  margin: 0;
+}
+
 /***********************************/
 /******** FILTERABLE FRIEND STYLING *********/
 /***********************************/
@@ -389,18 +405,15 @@ li>a.nav-menu-item {
   font-size: 300%;
   font-weight: 100;
 }
-
 .auth input[type=checkbox],
 input[type=radio] {
   position: absolute;
   opacity: 0;
 }
-
 .auth input[type=checkbox] + label,
 input[type=radio] + label {
   display: inline-block;
 }
-
 .auth input[type=checkbox] + label:before,
 input[type=radio] + label:before {
   content: "";
@@ -413,22 +426,18 @@ input[type=radio] + label:before {
   margin-right: 0.3em;
   background-color: white;
 }
-
 .auth input[type=radio] + label:before {
   border-radius: 50%;
 }
-
 .auth input[type=radio]:checked + label:before,
 input[type=checkbox]:checked + label:before {
   background-color: #0074d9;
   box-shadow: inset 0 0 0 0.15em white;
 }
-
 .auth input[type=radio]:focus + label:before,
 input[type=checkbox]:focus + label:before {
   outline: 0;
 }
-
 .auth .btn {
   font-size: 140%;
   text-transform: uppercase;
@@ -437,56 +446,46 @@ input[type=checkbox]:focus + label:before {
   background-color: #16214D;
   color: white;
 }
-
 .auth .btn:hover {
   background-color: #44C7F4;
 }
-
 .auth .btn:focus {
   outline: none !important;
 }
 .auth .btn.btn-lg {
   padding: 20px 30px;
 }
-
 .auth .btn:disabled {
   background-color: #333;
   color: #666;
 }
-
 .auth h1,
 h2,
 h3 {
   font-weight: 100;
 }
-
 .auth .friend-img{
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
 }
-
 .auth #logo img {
   width: 300px;
   margin-bottom: 60px;
 }
-
 .auth .home-description {
   font-weight: 100;
   margin: 100px 0;
 }
-
 .auth h2 {
   margin-top: 30px;
   margin-bottom: 40px;
   font-size: 200%;
 }
-
 .auth label {
   font-size: 100%;
   font-weight: 300;
 }
-
 .auth .btn-next {
   margin-top: 30px;
 }
@@ -497,10 +496,7 @@ h3 {
   padding-left: 10%;
   margin-bottom: 20px;
 }
-
 .auth .login-page .login-box {
   padding: 100px 0;
 }
 */
-
-
