--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -10,6 +10,12 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "proxima-nova", sans-serif;
+  text-align: center;
+  font-size: 300%;
+  font-weight: 100;
+}
 
 
 .flex-container {
@@ -53,6 +59,10 @@
 
 .teal {
   background-color: #017E82;
+}
+
+.light-teal {
+  background-color: #00B7BB;
 }
 
 .dark-teal {
@@ -287,6 +297,7 @@ li>a.nav-menu-item {
   color: #004851;
   text-decoration: none;
   text-align: left;
+  font-weight: normal;
   /*padding-left: 10px;*/
   font-size: 0.8em;
 }
@@ -317,6 +328,7 @@ li>a.nav-menu-item {
   border-top: solid;
   border-color: white;
   display: flex;
+  font-weight: normal;
   /*margin-bottom: 20px;*/
   /*padding: 0 12px;*/
   /*align-items: center;*/
@@ -452,6 +464,47 @@ li>a.nav-menu-item {
 .filter-link:hover {
   color: transparent;
 }
+
+
+
+/***********************************/
+/******** PINNED GIFT LIST *********/
+/***********************************/
+
+.friend-detail-container {
+  padding: 10px 0 20px 0;
+}
+.giftlist-circle {
+  background-color: #9E081B;
+  color: #FFF;
+  text-align: center;
+  align-content: center;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+}
+.giftlist-circle-container {
+  align-items: center;
+}
+
+.giftlist-main {
+  padding-bottom: 20px;
+}
+.giftlist-header {
+  margin-top: 70px;
+  font-size: 1.2em;
+  color: #FFF;
+  padding: 10px 0 10px 40px;
+}
+
+.category-header {
+  color: #FFF;
+  font-size: 0.8em;
+  font-weight: normal;
+  padding: 10px 0 10px 40px;
+  margin-bottom: 10px;
+}
+
 
 /***********************************/
 /******** AUTH0 STYLING *********/
