--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -374,7 +374,11 @@ li>a.nav-menu-item:hover, .navbar-brand>a:hover {
   color: #004851;
 }
 
-
+.book-title-thumb {
+    font-size: 0.4em;
+    text-align: left;
+    margin-left: 10%;
+}
 
 /***********************************/
 /******** ALL FRIEND VIEW ********/
@@ -592,7 +596,7 @@ li>a.nav-menu-item:hover, .navbar-brand>a:hover {
   margin: 10px;
 }
 
-.book img { vertical-align: middle; }
+.book img { vertical-align: middle; height: 107px;}
 
 /*
  *  In order for this to work, you must use Modernizer
@@ -626,7 +630,6 @@ li>a.nav-menu-item:hover, .navbar-brand>a:hover {
   -webkit-transform: perspective(100) rotateY(-3deg);
   outline: 1px solid transparent; /* Helps smooth jagged edges in Firefox */
   box-shadow: none;
-  margin: 0;
 }
 
 .csstransforms3d  .book img {
