--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -113,11 +113,11 @@ body {
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 480px;
-  
+
   /* Set up proportionate scaling */
   width: 100%;
   height: auto;
-  
+
   /* Set up positioning */
   position: fixed;
   top: 0;
@@ -603,6 +603,13 @@ li>a.nav-menu-item:hover, .navbar-brand>a:hover {
  */
 
  /***********************************/
+/******** USER PHOTO STYLING *********/
+/***********************************/
+.user-photo-small{
+  max-width: 350px;
+}
+
+ /***********************************/
 /******** MODERNIZR *********/
 /***********************************/
 
@@ -653,3 +660,5 @@ li>a.nav-menu-item:hover, .navbar-brand>a:hover {
 }
 .csstransforms3d  #book2:before { background-color: #333; }
 .csstransforms3d  #book3:before { background-color: #254053; }
+
+
