--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -664,4 +664,35 @@ li>a.nav-menu-item:hover, .navbar-brand>a:hover {
 .csstransforms3d  #book2:before { background-color: #333; }
 .csstransforms3d  #book3:before { background-color: #254053; }
 
+* {
+  box-sizing: border-box;
+}
+*:before, *:after {
+  box-sizing: border-box;
+}
 
+
+.section.open button:before, .section.open button:after {
+  height: 14px;
+}
+.section.open button:before {
+  transform: translate(0%, -50%) rotate(-45deg);
+}
+.section.open button:after {
+  transform: translate(0%, -50%) rotate(45deg);
+}
+.section.open .articlewrap {
+  height: 250px;
+}
+
+.articlewrap {
+  height: 0;
+  overflow: hidden;
+  transition: all .2s ease-in;
+}
+
+.article {
+  padding: 1em;
+  color: #333;
+  line-height: 1.3;
+}
