--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -149,6 +149,11 @@ body {
   padding: 10px;
 }
 
+.login-button a:hover {
+  text-decoration: none;
+  color: white;
+}
+
 .opacity {
   opacity: 0.8;
 }
