--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -102,31 +102,32 @@ body {
   font-weight: 700;
 }
 
-
-
 /***********************************/
 /******** LOGIN SCREEN *********/
 /***********************************/
 
 .login-container {
-  /*background-color: #017E82;*/
   background-image: url("../img/bg-tile.jpg");
-  /*display: flex;*/
-  padding-top: 20%;
-  padding-bottom: 50%;
-  overflow: auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
 
-  /* Set rules to fill background */
-  /*min-height: 100%;*/
+  /* Set up proportionate scaling and preserve the aspect ratio */
   min-width: 100%;
-
-  /* Set up proportionate scaling */
-  /*height: 100%;*/
+  min-height: 100%;
 
   /* Set up positioning */
-  /*position: fixed;*/
-  /*top: 0;*/
-  /*left: 0;*/
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.logo-responsive img {
+  max-width: 40%;
+}
+
+.logo-responsive {
+  max-width: 50%;
+  margin: auto;
 }
 
 .icon-container {
@@ -134,17 +135,15 @@ body {
 }
 
 .brand-container {
-  margin-bottom: 20%;
+  padding-bottom: 20%;
   text-align: center;
 }
 
 .login-button {
-  width: 80%;
-  height: 100%;
-  /*position: relative;*/
-  /*align-items: baseline;*/
+  width: 40%;
   border-color: #004851;
   font-weight: 400;
+  font-size: 5.0vw;
   background-color: #004851;
   padding: 10px;
 }
@@ -160,13 +159,12 @@ body {
 
 .login-button-container {
   background-color: #017E82;
-  /*align-self: flex-end;*/
 }
 
 .gyftee-text {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 400%;
+  font-size: 7.0vw;
   color: #FFF;
 }
 
@@ -182,7 +180,7 @@ ul {
   background: #017E82;
   border: none;
   border-radius: 0;
-  padding-bottom: 10px;
+  height: 70px;
 }
 
 .navbar-collapse {
@@ -243,7 +241,7 @@ ul {
 
 .welcome-main {
   /*holds the welcome, name greeting and photo*/
-  margin-top: 100px;
+  margin-top: 10px;
 }
 .welcome-container {
   padding: 0px 20px 0px 65px;
@@ -310,7 +308,7 @@ ul {
   /*position: relative;*/
   /*justify-content: center;*/
   border-color: #004851;
-  font-size: 0.6em;
+  font-size: 0.7em;
   background-color: #004851;
   color: #FFF;
   /*align-content: center;*/
@@ -441,7 +439,7 @@ ul {
 }
 
 .detail-main {
-  padding-top: 80px;
+  padding-top: 20px;
 }
 
 .detail-wrapper {
@@ -530,7 +528,7 @@ ul {
   color: #FFF;
   /*align-content: center;*/
   /*border-radius: 10px 0 10px 0;*/
-  margin: 90px 20px 10px 10px;
+  margin: 10px 20px 10px 10px;
   padding: 10px;
   text-align: center;
   width: 25%;
@@ -547,7 +545,7 @@ ul {
 }
 
 .friend-header-container {
-  padding: 80px 20px 10px 65px;
+  padding: 0px 20px 0 65px;
 }
 
 .friend-header-name {
@@ -592,7 +590,7 @@ ul {
 /***********************************/
 
 .friend-detail-container {
-  padding: 80px 0 20px 0;
+  padding: 10px 0 20px 0;
 }
 .giftlist-circle {
   background-color: #9E081B;
@@ -613,8 +611,6 @@ ul {
 }
 
 .giftlist-main {
-    margin-top: 80px;
-
   padding-bottom: 20px;
 }
 .giftlist-header {
