concert view is rendering + fix bugs where  unknown user might throw error

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -739,6 +739,10 @@ ul {
   max-width: 350px;
 }
 
+.concert-img{
+  max-width: 150px;
+}
+
  /***********************************/
 /******** MODERNIZR *********/
 /***********************************/
