--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -820,3 +820,55 @@ ul {
   color: #333;
   line-height: 1.3;
 }
+
+.section button {
+  position: absolute;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  height: 1.6em;
+  width: 3em;
+  outline: 0;
+  border: 0;
+  background: none;
+  text-indent: -9999%;
+  pointer-events: none;
+}
+.section button:before {
+  content: '';
+  display: block;
+  position: absolute;
+  height: 12px;
+  width: 4px;
+  border-radius: .3em;
+  background: #FEFEFE;
+  transform-origin: 50%;
+  top: 50%;
+  left: 50%;
+  transition: all .25s ease-in-out;
+  transform: translate(75%, -50%) rotate(45deg);
+}
+.section button:after {
+  content: '';
+  display: block;
+  position: absolute;
+  height: 12px;
+  width: 4px;
+  border-radius: .3em;
+  background: #FEFEFE;
+  transform-origin: 50%;
+  top: 50%;
+  left: 50%;
+  transition: all .25s ease-in-out;
+  transform: translate(-75%, -50%) rotate(-45deg);
+}
+
+.section.open button:before, .section.open button:after {
+  height: 14px;
+}
+.section.open button:before {
+  transform: translate(0%, -50%) rotate(-45deg);
+}
+.section.open button:after {
+  transform: translate(0%, -50%) rotate(45deg);
+}
