Style the concert detail view image

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -735,6 +735,10 @@ ul {
 .concert-thumb-container {
 }
 
+.concert-detail-thumb {
+  max-width: 100px;
+}
+
 .concert-thumb {
   max-width: 100px;
 }
